# nix-cargo-integration

./: .gitignore  .gitpod.yml  404.html  CHANGELOG.html  CHANGELOG.md  LICENSE  README.md  build.nix  cargo-toml-attributes.html  common.nix  config-options.html  default.nix  devShell.nix  devshell.toml  example_flake.nix  extraCrateOverrides.nix  flake.nix  index.html  lib.nix  nix-library.html  nixpkgs.nix  pkg-config-options.html  print.html  searchindex.js  searchindex.json  tips-and-tricks.html  utils.nix
.github/workflows/: flake-update.yml  nix.yml  pages.yml
cli/: Cargo.toml
cli/src/: flk.nix  main.rs
docs/: MANUAL.md  book.toml  default.nix  example_flake.nix
docs/src/: README.md  SUMMARY.md  book.toml  cargo-toml-attributes.md  examples.md  nix-library.md  tips-and-tricks.md
examples/cross-compile-aarch64/: Cargo.toml  crates.nix  flake.nix  rust-toolchain.toml
examples/cross-compile-aarch64/src/: main.rs
examples/cross-compile-wasm/: Cargo.toml  crates.nix  flake.nix  index.html  index.scss
examples/cross-compile-wasm/src/: app.rs  main.rs
examples/cross-compile-windows/: Cargo.toml  crates.nix  flake.nix
examples/customize-devshell/: flake.nix
examples/customize-profiles/: Cargo.toml  crates.nix  flake.nix
examples/customize-stdenv/: flake.nix
examples/numtide-devshell/: crates.nix  flake.nix
examples/simple/: crates.nix  flake.nix
examples/simple-crate/: Cargo.toml  crates.nix  flake.nix
examples/simple-workspace/: Cargo.toml  crates.nix  flake.nix
examples/simple-workspace/my-crate/: Cargo.toml
examples/simple-workspace/my-other-crate/: Cargo.toml
examples/simple-workspace/my-other-workspace-crate/: Cargo.toml
examples/simple-workspace/my-workspace-crate/: Cargo.toml
src/: build.nix  common.nix  createNixpkgsDrv.nix  devShell.nix  extra-crate-overrides.nix  extraCrateOverrides.nix  implementation.nix  interface.nix  lib.nix  makeOutput.nix  makeOutputs.nix  nixpkgs.nix  pkgs-lib.nix  pkgs-set.nix  shell.nix  utils.nix
src/functions/: combineDocsPackages.nix  filterDevshellIllegalVars.nix  findRustToolchain.nix  getModuleDefaults.nix  getProjectCrates.nix  mkCheckOnlyPackage.nix  mkClippyOnlyPackage.nix  mkDevshellFromDrvs.nix  mkDevshellFromRaw.nix  mkDocsOnlyPackage.nix  mkGenerateLockfilesApp.nix  mkPackagesFromRaw.nix  mkRawshellFromDrvs.nix  warnIfNoLock.nix
src/lib/: configModule.nix  default.nix  modules-docs.nix  namespacedConfigModule.nix  pkgConfigModule.nix  validateOptions.nix
src/modules/: crate.nix  output.nix  profile.nix  project.nix  target.nix
src/options/: drvConfig.nix  numtideDevshell.nix
templates/full/: flake.nix
templates/simple/: flake.nix
test-crate/: Cargo.toml
tests/basic-bin/: Cargo.toml
tests/basic-bin-clang/: Cargo.toml
tests/basic-devshell/: Cargo.toml  devshell.toml
tests/basic-devshell-cargo/: Cargo.toml
tests/basic-features/: Cargo.toml
tests/basic-git/: Cargo.toml
tests/basic-git-pre-1-53-0/: Cargo.toml
tests/basic-lib/: Cargo.toml
tests/basic-multiple-bin/: Cargo.toml
tests/basic-nightly/: Cargo.toml
tests/basic-nightly/src/: main.rs
tests/basic-override/: Cargo.toml
tests/basic-runtime-libs/: Cargo.toml
tests/basic-workspace/: Cargo.toml
tests/basic-workspace/basic-bin/: Cargo.toml
tests/broken/ffmpeg/: Cargo.toml
tests/desktop-file/: Cargo.toml  example.desktop
tests/desktop-file-toml/: Cargo.toml
tests/ffmpeg-clang/: Cargo.toml
tests/multiple-git/: Cargo.toml
tests/new-toolchain-file/: Cargo.toml  rust-toolchain.toml
tests/workspace-package/: Cargo.toml
(+8 files in other folders)
