[package]
name = "basic-git-pre-1-53-0"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"

[package.metadata.nix]
build = true

[dependencies]
linemd = { git = "https://github.com/yusdacra/linemd.git" }
wgpu-profiler = { git = "https://github.com/Imberflur/wgpu-profiler", tag = "wgpu-0.8" }
smol_str = { git = "https://github.com/rust-analyzer/smol_str.git", branch = "staging" }
keyboard-keynames = { git = "https://gitlab.com/Frinksy/keyboard-keynames.git", rev = "a97ae509cdb9dc70cf1bf0af762d2d1d3a0d6e0c" }