[package]
name = "basic-git"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"

[package.metadata.nix]
build = true

[dependencies]
rust-nix-templater = { git = "https://github.com/yusdacra/rust-nix-templater.git" }
wgpu-profiler = { git = "https://github.com/Imberflur/wgpu-profiler", tag = "wgpu-0.8" }
conrod_core = { git = "https://gitlab.com/veloren/conrod.git", branch = "copypasta_0.7" }
keyboard-keynames = { git = "https://gitlab.com/Frinksy/keyboard-keynames.git", rev = "a97ae509cdb9dc70cf1bf0af762d2d1d3a0d6e0c" }
