[package]
name = "basic-git"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"

[package.metadata.nix]
build = true

[dependencies]
linemd = { git = "https://github.com/yusdacra/linemd.git" }
bool_ext = { git = "https://github.com/U007D/bool_ext.git", tag = "v0.5.1" }
smol_str = { git = "https://github.com/rust-analyzer/smol_str.git", branch = "staging" }
tuple = { git = "https://github.com/s3bk/tuple.git", rev = "fdf8b4400ffb10506c711018a3cb918412a3c8c1" }