[package]
name = "multiple-git"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"

[package.metadata.nix]
build = true

[dependencies]
linemd = { git = "https://github.com/yusdacra/linemd.git", tag = "v0.4.0" }
linemdd = { package = "linemd", git = "https://github.com/yusdacra/linemd.git", tag = "v0.3.0" }
linemddd = { package = "linemd", git = "https://github.com/yusdacra/linemd.git", tag = "v0.2.0" }
